# thepopebot

logs/: job-logging-status-report-2026-02-11.md  thepopebot-daily-update-2026-02-11.md  thepopebot-news-2026-02-12.md
logs/0006720f-a804-422c-8451-0e4aaec78190/: job.md
logs/02a14a55-ac86-4a9e-8655-19e736e27db6/: 2026-02-16T13-00-31-214Z_fbae5127-ae27-4468-8119-fad95cd547f5.jsonl
logs/10334f00-8da1-4a3d-b0e2-07e243ab3e92/: 2026-02-11T15-32-52-417Z_e25f6937-3713-4463-b810-daa80706d44d.jsonl  job.md
logs/17aab337-dd50-4c3d-848b-a9a42fb61f49/: 2026-02-13T08-08-31-662Z_0241ff1c-7471-4636-8c02-2f02612687f6.jsonl  CODE_QUALITY_REVIEW_REPORT.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  JOB_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  job.md
logs/17aab337-dd50-4c3d-848b-a9a42fb61f49/config-templates/python/: pylintrc  pyproject.toml  setup.cfg
logs/17fb4339-dba2-4256-8ab7-51b7bc6f2dcc/: 2026-02-13T13-00-29-999Z_78c1e021-cfd7-494a-8c6e-fb7517e182f6.jsonl
logs/1f014fad-c9c6-4140-b9fa-e648fb13c30d/: 2026-02-20T13-00-36-490Z_479ccf04-0b5e-4720-a913-b046e228f41a.jsonl
logs/42b746af-c585-4064-bd4b-7af2c1a15dce/: 2026-02-17T13-00-31-062Z_485167ef-b9b7-47da-a9d3-d6787ff26b50.jsonl
logs/4d761de3-eeab-4a44-97fa-5ad250d0493e/: 2026-02-12T07-57-32-294Z_e5728e12-38b2-4e22-a1a3-de0b0774ae1c.jsonl  job.md
logs/51a12899-77df-499b-987a-71531ef39c54/: 2026-02-11T15-32-45-871Z_819b3362-e321-461c-8923-b52afc1de77f.jsonl  job.md
logs/6aa3dc82-b7b5-4b5b-bf65-9c7c39faaccd/: 2026-02-19T13-00-31-600Z_4e246b9b-c9e6-43fc-a513-6c34ca9e6e63.jsonl
logs/98c1db2a-02f8-4c11-adf0-0362a453c997/: job.md  (+1 more)
operating_system/: CRONS.json  DAILY_UPDATES_SEARCH.md
(+18 files in other folders)
